<resources>
    <string name="app_name">Arena</string>
    <string name="attack">Attack</string>
    <string name="special">Special</string>
    <string name="rage">Rage</string>
    <string name="surrender">Surrender</string>
    <string name="nameWriteHint">What\'s your name?</string>
    <string name="next">Next</string>
    <string name="nextBattle">Next Battle</string>
    <string name="saveGame">Save Game</string>
    <string name="stats">Stats</string>
    <string name="newGame">New Game</string>
    <string name="loadGame">Load Game</string>
    <string name="settings">Settings</string>
    <string name="strength">Strength :</string>
    <string name="dexterity">Dexterity :</string>
    <string name="defense">Defense :</string>
    <string name="endurance">Endurance :</string>
    <string name="plus">+</string>
    <string name="pointsLeft">Points Left</string>
    <string name="doSome">Do something</string>
    <string name="plrAttack">"You attacked the enemy <br /> Damage : "</string>
    <string name="aiAtt">"The opponent attacked you <br /> Damage : "</string>
    <string name="plrWon"> You defeated the enemy. <br /> Congratulations! </string>
    <string name="aiWon"> You were defeated... Better luck next time </string>
    <string name="plrMiss">You missed</string>
    <string name="aiMiss">The opponent missed</string>
    <string name="more">More</string>
    <string name="extra">Extra</string>
    <string name="hpInfo">Hitpoints :</string>
    <string name="dmgInfo">Damage :</string>
    <string name="criticalChance"> Critical Strike : </string>
    <string name="matchesWon">Matches Won :</string>
    <string name="dmgReduction">Damage Reduction :</string>
    <string name="attributes">Attributes</string>
    <string name="home">Home</string>
    <string name="notEnoughEnergy">You don\'t have enough energy to to that</string>
    <string name="youRest">You decide to rest for a round. Your energy increases significantly.</string>
    <string name="fullOfEnergy">You are already full of energy</string>
    <string name="throwSand">Throw Sand</string>
    <string name="rest">Rest</string>
    <string name="protection">Protection :</string>
</resources>
